--- a/index.html
+++ b/index.html
@@ -1,3 +1,12 @@
-git add .
-git commit -m "HTML 첫 페이지 작성"
-git push origin main
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="UTF-8">
+    <title>민희의 GitHub 블로그</title>
+  </head>
+  <body>
+    <h1>안녕하세요! 👋</h1>
+    <p>여기는 민희의 개발 블로그입니다.</p>
+    <p>이제 막 시작했어요! 앞으로의 여정을 기록해볼게요 :)</p>
+  </body>
+</html>
