폰트와 스타일 추가!

--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
   <head>
     <meta charset="UTF-8">
     <title>민희의 GitHub 블로그</title>
+    <link href="https://fonts.googleapis.com/css2?family=Gowun+Dodum&display=swap" rel="stylesheet">
   </head>
-  <body>
-    <h1>안녕하세요! 👋</h1>
-    <p>여기는 민희의 개발 블로그입니다.</p>
-    <p>이제 막 시작했어요! 앞으로의 여정을 기록해볼게요 :)</p>
+  <body style="font-family: 'Gowun Dodum', sans-serif; background-color: #fffefc; padding: 40px; line-height: 1.8;">
+    <h1 style="font-size: 2.5rem;">안녕하세요! 👋</h1>
+    <p style="font-size: 1.2rem;">여기는 민희의 개발 블로그입니다.</p>
+    <p style="font-size: 1.2rem;">이제 막 시작했어요! 앞으로의 여정을 기록해볼게요 :)</p>
   </body>
 </html>
+
