핑크 스타일 블로그 템플릿 적용

--- a/index.html
+++ b/index.html
@@ -1,14 +1,90 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="UTF-8">
-    <title>민희의 GitHub 블로그</title>
-    <link href="https://fonts.googleapis.com/css2?family=Gowun+Dodum&display=swap" rel="stylesheet">
-  </head>
-  <body style="font-family: 'Gowun Dodum', sans-serif; background-color: #fffefc; padding: 40px; line-height: 1.8;">
-    <h1 style="font-size: 2.5rem;">안녕하세요! 👋</h1>
-    <p style="font-size: 1.2rem;">여기는 민희의 개발 블로그입니다.</p>
-    <p style="font-size: 1.2rem;">이제 막 시작했어요! 앞으로의 여정을 기록해볼게요 :)</p>
-  </body>
+<html lang="ko">
+<head>
+  <meta charset="UTF-8">
+  <title>민희의 개발 블로그</title>
+  <link href="https://fonts.googleapis.com/css2?family=Gowun+Dodum&display=swap" rel="stylesheet">
+  <style>
+    body {
+      font-family: 'Gowun Dodum', sans-serif;
+      background-color: #fff0f5;
+      color: #333;
+      padding: 40px;
+      margin: 0;
+    }
+
+    .container {
+      max-width: 800px;
+      margin: auto;
+      background-color: white;
+      padding: 40px;
+      border-radius: 16px;
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+    }
+
+    h1 {
+      font-size: 2.5rem;
+      color: #ff69b4;
+      text-align: center;
+    }
+
+    p {
+      font-size: 1.2rem;
+      line-height: 1.8;
+    }
+
+    .dev-log {
+      margin-top: 40px;
+    }
+
+    .log-item {
+      background-color: #ffe4ec;
+      border-left: 6px solid #ff69b4;
+      padding: 20px;
+      margin-bottom: 20px;
+      border-radius: 10px;
+    }
+
+    .log-item h3 {
+      margin-top: 0;
+      color: #d63384;
+    }
+
+    .footer {
+      text-align: center;
+      margin-top: 60px;
+      color: #999;
+      font-size: 0.9rem;
+    }
+  </style>
+</head>
+<body>
+  <div class="container">
+    <h1>💻 민희의 개발 블로그</h1>
+    <p>안녕하세요! 핑크핑크한 감성을 사랑하는 개발자 민희입니다 :)<br>
+    이곳은 저의 개발 여정과 공부 기록을 담아가는 공간이에요.</p>
+
+    <div class="dev-log">
+      <h2>📝 개발 일지</h2>
+
+      <div class="log-item">
+        <h3>2025-03-30 | GitHub 블로그 처음 만들기 🎉</h3>
+        <p>처음으로 index.html을 만들어서 GitHub Pages에 올려봤어요! 터미널이랑 push, commit도 해보고 진짜 개발자가 된 느낌이에요 💖</p>
+      </div>
+
+      <div class="log-item">
+        <h3>2025-03-31 | HTML 폰트 바꾸고 스타일 입히기 ✨</h3>
+        <p>Gowun Dodum 폰트를 적용하고 배경색도 핑크핑크하게 바꿨어요! 완전 내 스타일~</p>
+      </div>
+
+      <!-- 여기에 계속 추가해가면 돼! -->
+    </div>
+
+    <div class="footer">
+      © 2025 Minhee. All rights reserved.
+    </div>
+  </div>
+</body>
 </html>
+
 
