--- a/index.html
+++ b/index.html
@@ -10,24 +10,23 @@
       font-family: 'Gowun Dodum', sans-serif;
       margin: 0;
       display: flex;
-      background-color: #fff0f5;
-      color: #333;
+      background-color: #1e1e1e; /* 다크 그레이 배경 */
+      color: #f5f5f5; /* 밝은 글자색 */
     }
 
-    /* 좌측 사이드바 */
     .sidebar {
       width: 220px;
-      background-color: #ffd3e2;
+      background-color: #2c2c2c; /* 어두운 회색 */
       height: 100vh;
       padding: 30px 20px;
-      box-shadow: 2px 0 8px rgba(0,0,0,0.1);
+      box-shadow: 2px 0 8px rgba(0,0,0,0.3);
       position: fixed;
       left: 0;
       top: 0;
     }
 
     .sidebar h2 {
-      color: #d63384;
+      color: #ffffff;
       margin-bottom: 30px;
       font-size: 1.6rem;
     }
@@ -35,13 +34,13 @@
     .sidebar a {
       display: block;
       margin: 10px 0;
-      color: #444;
+      color: #ccc;
       text-decoration: none;
       font-size: 1.1rem;
     }
 
     .sidebar a:hover {
-      color: #d63384;
+      color: #ffffff;
       font-weight: bold;
     }
 
@@ -52,11 +51,10 @@
     .sns a {
       margin-right: 10px;
       font-size: 1.5rem;
-      color: #d63384;
+      color: #ffffff;
       text-decoration: none;
     }
 
-    /* 메인 컨텐츠 */
     .main {
       margin-left: 240px;
       padding: 40px;
@@ -66,21 +64,22 @@
     .container {
       max-width: 800px;
       margin: auto;
-      background-color: white;
+      background-color: #2e2e2e; /* 블로그 카드 배경 */
       padding: 40px;
       border-radius: 16px;
-      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.4);
     }
 
     h1 {
       font-size: 2.5rem;
-      color: #ff69b4;
+      color: #ffffff;
       text-align: center;
     }
 
     p {
       font-size: 1.2rem;
       line-height: 1.8;
+      color: #dddddd;
     }
 
     .dev-log {
@@ -88,8 +87,8 @@
     }
 
     .log-item {
-      background-color: #ffe4ec;
-      border-left: 6px solid #ff69b4;
+      background-color: #3a3a3a;
+      border-left: 6px solid #4e9af1; /* 포인트 블루 */
       padding: 20px;
       margin-bottom: 20px;
       border-radius: 10px;
@@ -98,26 +97,25 @@
 
     .log-item:hover {
       transform: translateY(-5px);
-      box-shadow: 0 6px 16px rgba(0,0,0,0.15);
+      box-shadow: 0 6px 16px rgba(0,0,0,0.5);
     }
 
     .log-item h3 {
       margin-top: 0;
-      color: #d63384;
+      color: #ffffff;
     }
 
     .footer {
       text-align: center;
       margin-top: 60px;
-      color: #999;
+      color: #777;
       font-size: 0.9rem;
     }
   </style>
 </head>
 <body>
-  <!-- 좌측 사이드바 -->
   <div class="sidebar">
-    <h2>💖 mini's dev diary</h2>
+    <h2>💻 mini's dev diary</h2>
     <a href="#">소개</a>
     <a href="#">개발일지</a>
     <a href="#">연락하기</a>
@@ -127,11 +125,10 @@
     </div>
   </div>
 
-  <!-- 메인 컨텐츠 -->
   <div class="main">
     <div class="container">
       <h1>mini's dev diary</h1>
-      <p>안녕하세요! 개발자가 되고싶어 공부를 시작한 mini 입니다 :) <br>
+      <p>안녕하세요! 개발자가 되고싶어 공부를 시작한 mini 입니다 :)<br>
       이곳은 저의 개발 여정과 공부 기록을 담아가는 공간이에요.</p>
 
       <div class="dev-log">
@@ -147,7 +144,6 @@
           <p>Gowun Dodum 폰트를 적용하고 배경색도 핑크핑크하게 바꿨어요! 흠 너무 핑크한 느낌인가?</p>
         </div>
 
-        <!-- 새로운 일지를 여기 추가해가면 돼! -->
       </div>
 
       <div class="footer">
