--- a/index.html
+++ b/index.html
@@ -3,30 +3,31 @@
 <head>
   <meta charset="UTF-8">
   <title>mini's dev diary</title>
-  <link href="https://fonts.googleapis.com/css2?family=Gowun+Dodum&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
   <style>
     body {
-      font-family: 'Gowun Dodum', sans-serif;
+      font-family: 'Inter', sans-serif;
       margin: 0;
       display: flex;
-      background-color: #1e1e1e; /* 다크 그레이 배경 */
-      color: #f5f5f5; /* 밝은 글자색 */
+      background-color: #f5f5f5; /* 아주 연한 회색 */
+      color: #1e1e1e; /* 진한 회색 텍스트 */
     }
 
     .sidebar {
       width: 220px;
-      background-color: #2c2c2c; /* 어두운 회색 */
+      background-color: #ffffff;
       height: 100vh;
       padding: 30px 20px;
-      box-shadow: 2px 0 8px rgba(0,0,0,0.3);
+      box-shadow: 2px 0 8px rgba(0,0,0,0.05);
       position: fixed;
       left: 0;
       top: 0;
+      border-right: 1px solid #e0e0e0;
     }
 
     .sidebar h2 {
-      color: #ffffff;
+      color: #111;
       margin-bottom: 30px;
       font-size: 1.6rem;
     }
@@ -34,13 +35,13 @@
     .sidebar a {
       display: block;
       margin: 10px 0;
-      color: #ccc;
+      color: #555;
       text-decoration: none;
       font-size: 1.1rem;
     }
 
     .sidebar a:hover {
-      color: #ffffff;
+      color: #000;
       font-weight: bold;
     }
 
@@ -51,7 +52,7 @@
     .sns a {
       margin-right: 10px;
       font-size: 1.5rem;
-      color: #ffffff;
+      color: #333;
       text-decoration: none;
     }
 
@@ -64,22 +65,22 @@
     .container {
       max-width: 800px;
       margin: auto;
-      background-color: #2e2e2e; /* 블로그 카드 배경 */
+      background-color: #ffffff;
       padding: 40px;
-      border-radius: 16px;
-      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.4);
+      border-radius: 12px;
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.05);
     }
 
     h1 {
-      font-size: 2.5rem;
-      color: #ffffff;
+      font-size: 2.2rem;
+      color: #222;
       text-align: center;
     }
 
     p {
-      font-size: 1.2rem;
+      font-size: 1.05rem;
       line-height: 1.8;
-      color: #dddddd;
+      color: #333;
     }
 
     .dev-log {
@@ -87,28 +88,28 @@
     }
 
     .log-item {
-      background-color: #3a3a3a;
-      border-left: 6px solid #4e9af1; /* 포인트 블루 */
+      background-color: #f9f9f9;
+      border-left: 4px solid #4e9af1;
       padding: 20px;
       margin-bottom: 20px;
-      border-radius: 10px;
+      border-radius: 8px;
       transition: all 0.3s ease;
     }
 
     .log-item:hover {
-      transform: translateY(-5px);
-      box-shadow: 0 6px 16px rgba(0,0,0,0.5);
+      transform: translateY(-4px);
+      box-shadow: 0 6px 16px rgba(0,0,0,0.08);
     }
 
     .log-item h3 {
       margin-top: 0;
-      color: #ffffff;
+      color: #111;
     }
 
     .footer {
       text-align: center;
       margin-top: 60px;
-      color: #777;
+      color: #888;
       font-size: 0.9rem;
     }
   </style>
@@ -128,7 +129,7 @@
   <div class="main">
     <div class="container">
       <h1>mini's dev diary</h1>
-      <p>안녕하세요! 개발자가 되고싶어 공부를 시작한 mini 입니다 :)<br>
+      <p>개발하는것이 즐거워 공부를 시작했습니다.<br>
       이곳은 저의 개발 여정과 공부 기록을 담아가는 공간이에요.</p>
 
       <div class="dev-log">
@@ -136,12 +137,12 @@
 
         <div class="log-item">
           <h3>2025-03-30 | GitHub 블로그 처음 만들기 🎉</h3>
-          <p>처음으로 index.html을 만들어서 GitHub Pages에 올려봤어요! 깃허브 관리하면서 블로그도 만들어보고싶었는데, 너무 신기해요! </p>
+          <p>처음으로 index.html을 만들어서 GitHub Pages에 올려봤어요! 깃허브 관리하면서 블로그도 만들어보고싶었는데, 오늘 드디어 해 보았더니 너무 기분이 좋아요 </p>
         </div>
 
         <div class="log-item">
-          <h3>2025-03-31 | HTML 폰트 바꾸고 스타일 입히기 ✨</h3>
-          <p>Gowun Dodum 폰트를 적용하고 배경색도 핑크핑크하게 바꿨어요! 흠 너무 핑크한 느낌인가?</p>
+          <h3>2025-03-30 | HTML 폰트 바꾸고 스타일 입히기 ✨</h3>
+          <p>블로그를 핑크 느낌으로 꾸몄다가, 다시 컬러를 수정하고 있어요. 아직 익숙하지않아서 천천히 해 나가보려고 해요</p>
         </div>
 
       </div>
