좌측 글꼴 수정!

--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
       font-family: 'Inter', sans-serif;
       margin: 0;
       display: flex;
-      background-color: #f5f5f5; /* 아주 연한 회색 */
-      color: #1e1e1e; /* 진한 회색 텍스트 */
+      background-color: #f5f5f5;
+      color: #1e1e1e;
     }
 
     .sidebar {
-      width: 220px;
+      width: 260px;
       background-color: #ffffff;
       height: 100vh;
       padding: 30px 20px;
@@ -29,7 +29,8 @@
     .sidebar h2 {
       color: #111;
       margin-bottom: 30px;
-      font-size: 1.6rem;
+      font-size: 1.8rem;
+      word-break: keep-all;
     }
 
     .sidebar a {
@@ -57,7 +58,7 @@
     }
 
     .main {
-      margin-left: 240px;
+      margin-left: 280px;
       padding: 40px;
       flex: 1;
     }
@@ -129,7 +130,7 @@
   <div class="main">
     <div class="container">
       <h1>mini's dev diary</h1>
-      <p>개발하는것이 즐거워 공부를 시작했습니다.<br>
+      <p>안녕하세요! 개발자가 되고싶어 공부를 시작한 mini 입니다 :)<br>
       이곳은 저의 개발 여정과 공부 기록을 담아가는 공간이에요.</p>
 
       <div class="dev-log">
@@ -137,12 +138,12 @@
 
         <div class="log-item">
           <h3>2025-03-30 | GitHub 블로그 처음 만들기 🎉</h3>
-          <p>처음으로 index.html을 만들어서 GitHub Pages에 올려봤어요! 깃허브 관리하면서 블로그도 만들어보고싶었는데, 오늘 드디어 해 보았더니 너무 기분이 좋아요 </p>
+          <p>처음으로 index.html을 만들어서 GitHub Pages에 올려봤어요! 깃허브 관리하면서 블로그도 만들어보고싶었는데, 너무 신기해요! </p>
         </div>
 
         <div class="log-item">
-          <h3>2025-03-30 | HTML 폰트 바꾸고 스타일 입히기 ✨</h3>
-          <p>블로그를 핑크 느낌으로 꾸몄다가, 다시 컬러를 수정하고 있어요. 아직 익숙하지않아서 천천히 해 나가보려고 해요</p>
+          <h3>2025-03-31 | HTML 폰트 바꾸고 스타일 입히기 ✨</h3>
+          <p>Gowun Dodum 폰트를 적용하고 배경색도 핑크핑크하게 바꿨어요! 흠 너무 핑크한 느낌인가?</p>
         </div>
 
       </div>
