--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 </head>
 <body>
   <div class="sidebar">
-    <h2>💻 mini's dev diary</h2>
+    <h2>mini's dev diary</h2>
     <a href="#">소개</a>
     <a href="#">개발일지</a>
     <a href="#">연락하기</a>
@@ -130,20 +130,21 @@
   <div class="main">
     <div class="container">
       <h1>mini's dev diary</h1>
-      <p>안녕하세요! 개발자가 되고싶어 공부를 시작한 mini 입니다 :)<br>
-      이곳은 저의 개발 여정과 공부 기록을 담아가는 공간이에요.</p>
+      <p>컴퓨터를 공부하고 있어요<br>
+      저의 개발 여정과 공부 기록을 담기 위해 만든 블로그입니다.</p>
+      ai이야기, 개발코드, 개발일지를 업로드 할 예정입니다.</p>
 
       <div class="dev-log">
-        <h2>📝 개발 일지</h2>
+        <h2>개발 일지</h2>
 
         <div class="log-item">
-          <h3>2025-03-30 | GitHub 블로그 처음 만들기 🎉</h3>
-          <p>처음으로 index.html을 만들어서 GitHub Pages에 올려봤어요! 깃허브 관리하면서 블로그도 만들어보고싶었는데, 너무 신기해요! </p>
+          <h3>2025-03-30 | GitHub 블로그 처음 만들기</h3>
+          <p>처음으로 index.html을 만들어서 GitHub Pages에 업로드하기/블로그도 생성 </p>
         </div>
 
         <div class="log-item">
-          <h3>2025-03-31 | HTML 폰트 바꾸고 스타일 입히기 ✨</h3>
-          <p>Gowun Dodum 폰트를 적용하고 배경색도 핑크핑크하게 바꿨어요! 흠 너무 핑크한 느낌인가?</p>
+          <h3>2025-03-30 | HTML 폰트 바꾸고 스타일 입히기</h3>
+          <p>핑크 테마에서 그레이 & 화이트 트낌으로 수정, 폰트도 수정</p>
         </div>
 
       </div>
