일지 좌측 컬러 수정

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 
     .log-item {
       background-color: #f9f9f9;
-      border-left: 4px solid #4e9af1;
+      border-left: 4px solid #333;
       padding: 20px;
       margin-bottom: 20px;
       border-radius: 8px;
@@ -130,21 +130,21 @@
   <div class="main">
     <div class="container">
       <h1>mini's dev diary</h1>
-      <p>컴퓨터를 공부하고 있어요<br>
-      저의 개발 여정과 공부 기록을 담기 위해 만든 블로그입니다.</p>
-      ai이야기, 개발코드, 개발일지를 업로드 할 예정입니다.</p>
+      <p>컴퓨터를 공부하고 있어요 =)<br>
+      저의 개발 여정과 공부 기록을 담기 위해 만든 블로그입니다.<br>
+      개발일지, AI 공부기록을 업로드 할 예정이에요 *^^*</p>
 
       <div class="dev-log">
-        <h2>개발 일지</h2>
+        <h2>**개발 일지**</h2>
 
         <div class="log-item">
           <h3>2025-03-30 | GitHub 블로그 처음 만들기</h3>
-          <p>처음으로 index.html을 만들어서 GitHub Pages에 업로드하기/블로그도 생성 </p>
+          <p>처음으로 index.html을 만들어서 GitHub Pages에 업로드하기 / 블로그 만들기 </p>
         </div>
 
         <div class="log-item">
           <h3>2025-03-30 | HTML 폰트 바꾸고 스타일 입히기</h3>
-          <p>핑크 테마에서 그레이 & 화이트 트낌으로 수정, 폰트도 수정</p>
+          <p>그레이 & 화이트 트낌으로 수정, 폰트도 수정</p>
         </div>
 
       </div>
